--- a/src/lunabot_navigation/config/nav2.yaml
+++ b/src/lunabot_navigation/config/nav2.yaml
@@ -46,9 +46,14 @@ local_costmap:
       plugins: ["obstacle_layer", "inflation_layer"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
-        observation_sources: scan_filtered
+        observation_sources: scan_filtered depth_scan
         scan_filtered:
           topic: scan/filtered
+          max_obstacle_height: 0.60
+          clearing: true
+          marking: true
+        depth_scan:
+          topic: scan_from_depth
           max_obstacle_height: 0.60
           clearing: true
           marking: true
@@ -70,9 +75,14 @@ global_costmap:
         plugin: "nav2_costmap_2d::StaticLayer"
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
-        observation_sources: scan_filtered
+        observation_sources: scan_filtered depth_scan
         scan_filtered:
           topic: scan/filtered
+          max_obstacle_height: 0.60
+          clearing: true
+          marking: true
+        depth_scan:
+          topic: scan_from_depth
           max_obstacle_height: 0.60
           clearing: true
           marking: true
