build: switch Python/launch packages to ament_python in package.xml

--- a/src/lunabot_localization/package.xml
+++ b/src/lunabot_localization/package.xml
@@ -5,7 +5,7 @@
   <description>Global localization with AMCL and map_server.</description>
   <maintainer email="you@example.com">LunaBot</maintainer>
   <license>Apache-2.0</license>
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_python</buildtool_depend>
   <exec_depend>nav2_map_server</exec_depend>
   <exec_depend>nav2_amcl</exec_depend>
   <exec_depend>nav2_lifecycle_manager</exec_depend>
