--- a/src/lunabot_base/package.xml
+++ b/src/lunabot_base/package.xml
@@ -5,7 +5,7 @@
   <description>Base drivers and odometry for LunaBot.</description>
   <maintainer email="you@example.com">LunaBot</maintainer>
   <license>Apache-2.0</license>
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_python</buildtool_depend>
   <exec_depend>rclpy</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
