--- a/src/lunabot_bringup/package.xml
+++ b/src/lunabot_bringup/package.xml
@@ -5,7 +5,7 @@
   <description>Top-level bringup for LunaBot.</description>
   <maintainer email="you@example.com">LunaBot</maintainer>
   <license>Apache-2.0</license>
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_python</buildtool_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>lunabot_description</exec_depend>
   <exec_depend>launch</exec_depend>
