--- a/src/lunabot_mapping/package.xml
+++ b/src/lunabot_mapping/package.xml
@@ -5,7 +5,7 @@
   <description>SLAM mapping using Cartographer.</description>
   <maintainer email="you@example.com">LunaBot</maintainer>
   <license>Apache-2.0</license>
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_python</buildtool_depend>
   <exec_depend>cartographer_ros</exec_depend>
   <exec_depend>cartographer_ros_msgs</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
