--- a/src/lunabot_state_estimation/package.xml
+++ b/src/lunabot_state_estimation/package.xml
@@ -5,7 +5,7 @@
   <description>State estimation with robot_localization (EKF/UKF).</description>
   <maintainer email="you@example.com">LunaBot</maintainer>
   <license>Apache-2.0</license>
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_python</buildtool_depend>
   <exec_depend>robot_localization</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
