--- a/src/lunabot_perception/package.xml
+++ b/src/lunabot_perception/package.xml
@@ -11,4 +11,7 @@
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>pcl_msgs</exec_depend>
   <exec_depend>message_filters</exec_depend>
+  <export>
+    <build_type>ament_python</build_type>
+  </export>
 </package>
