--- a/src/lunabot_mapping/package.xml
+++ b/src/lunabot_mapping/package.xml
@@ -10,4 +10,7 @@
   <exec_depend>cartographer_ros_msgs</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <export>
+    <build_type>ament_python</build_type>
+  </export>
 </package>
