--- a/src/lunabot_navigation/package.xml
+++ b/src/lunabot_navigation/package.xml
@@ -12,4 +12,7 @@
   <exec_depend>nav2_controller</exec_depend>
   <exec_depend>nav2_recoveries</exec_depend>
   <exec_depend>nav2_lifecycle_manager</exec_depend>
+  <export>
+    <build_type>ament_python</build_type>
+  </export>
 </package>
