--- a/src/lunabot_state_estimation/package.xml
+++ b/src/lunabot_state_estimation/package.xml
@@ -11,4 +11,7 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
+  <export>
+    <build_type>ament_python</build_type>
+  </export>
 </package>
